--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           name: Build for multiple architectures
           command: |
             for GOOS in darwin linux windows; do
-              for GOARCH in 386 amd64; do
+              for GOARCH in amd64; do
                   EXTENSION=""
                   if [[ "${GOOS}" == "windows" ]]; then EXTENSION=".exe"; fi
                   go build -v -o artifacts/${CIRCLE_PROJECT_REPONAME}_${GOOS}_${GOARCH}${EXTENSION}
